# ml-finance

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json  requirements.txt  run.sh
backend/: features.py  main.py  train_lgbm_direction.py  training.py
backend/data/: __init__.py  client.py  fetch_data.py
backend/routers/: messages.py  predictor.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.jsx  App.tsx  index.css
