[project]
name = "ml-finance"
version = "0.1.0"
description = "Dissertation project for machine learning in finance."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.135.1",
    "joblib>=1.5.3",
    "lightgbm>=4.6.0",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "pandas-stubs>=3.0.0.260204",
    "scikit-learn>=1.8.0",
    "tiingo>=0.16.1",
    "yfinance>=1.2.0",
]


[tool.basedpyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.12"

include = [ "." ]
exclude = [
  ".venv/",
  ".git/",
  "**/__pycache__",
]

reportMissingImports = true
reportMissingTypeStubs = false
typeCheckingMode = "basic"

reportOptionalMemberAccess = "warning"
reportOptionalSubscript = "warning"
reportOptionalCall = "warning"
reportOptionalIterable = "warning"

reportGeneralTypeIssues = "warning"
reportUntypedFunctionDecorator = "none"
reportUnnecessaryTypeIgnoreComment = "warning"
reportUnboundVariable = "error"
reportUnusedImport = "warning"
